--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,19 +1,22 @@
 .App {
   text-align: center;
+  height: 100vh;
+  background: rgb(46,10,190);
+  background: linear-gradient(45deg, rgba(46,10,190,0.4) 0%, rgba(237,198,215,0.6) 0%, rgba(132,95,201,1) 100%);
 }
-
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -35,4 +38,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
