--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,9 +1,19 @@
 .App {
-  text-align: center;
-  height: 100vh;
-  background: rgb(46,10,190);
-  background: linear-gradient(45deg, rgba(46,10,190,0.4) 0%, rgba(237,198,215,0.6) 0%, rgba(132,95,201,1) 100%);
+  margin: 0;
+  background: 'rgb(46,10,190)';
+  background: 'linear-gradient(45deg, rgba(46,10,190,0.4) 0%, rgba(237,198,215,0.6) 0%, rgba(132,95,201,1) 100%)';
+  height: 100%;
+  width: 100%;
 }
+/* #App {
+  margin: 0;
+  background: 'rgb(46,10,190)';
+  /* background: 'linear-gradient(45deg, rgba(46,10,190,0.4) 0%, rgba(237,198,215,0.6) 0%, rgba(132,95,201,1) 100%)'; */
+  /* background-repeat: no-repeat; */
+  /* background-size: cover; *//*
+  height: 100%;
+  width: 100%;
+} */
 /*
 .App-logo {
   height: 40vmin;
