--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,5 +1,8 @@
-body {
+html, body, #app, #app>div, #app>#box{
   margin: 0;
+  height: 100%;
+}
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +13,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  box-sizing: border-box;
+  scrollbar-color: #90caf9 #1e1e1e;
+  scrollbar-width: thin;
+}
+
+::-webkit-scrollbar {
+  background-color: #7e7e7e;
+  width: 8px;
+  border-radius: 8px;
+
+}
+::-webkit-scrollbar-thumb {
+  background-color: #90caf9;
+  border-radius: 8px;
 }
